fix spacing of org selector, add cog

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -8,6 +8,27 @@ html, body {
 span.pficon-enterprise.fa-2x {
     padding-top: 5px;
 }
+.navbar-default .navbar-brand {
+    &:hover, &:focus, &:active {
+        color: $white;
+        text-decoration: none;
+    }
+    .dropdown {
+        a.dropdown-toggle {
+            padding-left: 5px;
+            &:hover, &:focus, &:active {
+                background-image: linear-gradient(to bottom,#434343 0,#303030 100%);
+                text-decoration: none;
+                padding: 24px 0 8px 5px;
+            }
+        }
+        /*&:hover {
+            background-image: linear-gradient(to bottom,#434343 0,#303030 100%);
+        }*/
+    }
+}
+
+
 .row {
     margin-right: 0;
     margin-left: 0;
@@ -18,6 +39,11 @@ span.pficon-enterprise.fa-2x {
     left: 0;
     height: 100%;
 }
+
+.project-settings-icon {
+    margin-left: 20px;
+}
+
 small {
     font-size: $font-small;
 }
@@ -53,4 +79,8 @@ div.dropdown.custom-kebab.dropdown-kebab-pf.open {
     bottom: 0;
     height: 50px;
     background-color: #d7d7d7;
+}
+.org-picker {
+    left: 32px;
+    min-width: 325px;
 }
